src/layouts/index.scss
/* ... */
/* ================================= 
  Page Index
==================================== */

.container {
  height: 100vh;
  font-family: "Clear Sans", sans-serif;
  font-weight: 300;
  display: grid;
  grid-template-areas:
    "header"
    "main";
  grid-template-columns: 1fr;
	grid-template-rows: 50px 1fr;
	background-color: rgba(0,0,0,0.6);
}

.header {
  grid-area: header;
  background: transparent;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-family: "CooperHewitt", sans-serif;
  & .logo {
    background-color: $white;
    height: 50px;
    width: 65px;
    & a {
      font-size: 33px;
      color: $blue;
      text-decoration: none;
      font-weight: normal;
      padding: 0;
      height: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
      &:hover {
        color: $green;
        transition: all 0.2s ease-in-out;
      }
    }
  }
}

.main {
  grid-area: main;
}

.main-content {
  max-width: 900px;
  margin: 135px auto 20px;
  min-height: 60vh;
  padding: 100px 5% 80px;
  color: #f5f5f5;
  text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.6);
  & h1 {
    font-size: 3em;
    font-weight: 400;
  }
  & p {
    font-size: 1.6em;
    line-height: 1.2;
    & span {
      color: $orange;
    }
  }
  @media (max-width: 550px) {
    margin: 35px auto 20px;
  }
}

#bg-video {
  opacity: 0.6;
  position: fixed;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: -100;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

/* ================================= 
 footer
==================================== */

footer {
  color: $white;
  text-shadow: 2px 3px 6px rgba(0, 0, 0, 0.6);
  text-align: center;
  & h3 {
    font-size: 1.5em;
    text-transform: uppercase;
    margin-bottom: 1rem;
    font-weight: 200;
  }
  & ul {
    list-style-type: none;
    margin: 0;
    & li {
      display: inline-block;
      margin: 0 20px;
      &:first-child {
        margin-left: 0;
      }
      &:last-child {
        margin-right: 0;
      }
      & .footer-link {
        font-size: 3em;
        color: $white;
        text-shadow: none;
        &.grow {
          transition: all 0.2s ease-in-out;
          &:hover {
            transform: scale(1.5);
            color: $green;
          }
        }
      }
    }
  }
  @media (max-width: 550px) {
    transform: translateY(-10%);
  }
}

/* ================================= 
  Page Inside
==================================== */

.inside {
  height: 100%;
  background-size: cover;
  background-attachment: fixed;
  &.dev {
    background-image: url(../images/dark-forest.jpg);
  }
  &.music {
    background-image: url(../images/studio.jpg);
  }
  &.contact {
    // background-image: url(../images/powerlines.jpg);
    background-image: url("../images/topography.svg"),
      linear-gradient(110deg, #3e30fe, #3cd3ad);
    background-size: 340px, auto;
    & .inside-text p {
      @media (max-width: 550px) {
        font-size: 1em;
      }
    }
  }
  & .inside-text {
    transform: translateY(50%);
    margin-left: 75px;
    @media (max-width: 767px) {
      margin-left: 20px;
    }
    & p {
      color: $white;
      font-size: 1.6em;
      line-height: 1.2;
      text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.6);
      @media (max-width: 480px) {
        font-size: 1em;
      }
      & a {
        text-decoration: none;
        color: $green;
        &:hover {
          color: $blue;
        }
      }
      & .contact-link:hover {
        color: $orange;
      }
    }
  }
}

/* ================================= 
 Page Dev
==================================== */

.flex-container-dev {
  height: 100%;
  display: flex;
	flex-direction: column;
	background-color: rgba(0,0,0,0.6);
  // display: grid;
  // grid-template-columns: 1fr 1fr;
  // grid-template-rows: 175px minmax(150px, auto);
  // grid-gap: 20px 50px;
  // max-width: 90%;
  // margin: auto;
  // grid-template-areas:
  //   "grid-intro-dev grid-intro-dev"
  //   "grid-left-dev grid-right-dev";
  & h3 {
    color: $white;
    text-align: center;
    text-transform: uppercase;
    font-family: "CooperHewitt-Semibold", sans-serif;
    margin: 55px auto 10px;
    text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.6);
    & a {
      color: $green;
      text-decoration: none;
    }
    & a:hover {
      color: $blue;
    }
  }
  & img {
    border: solid 1px rgba(110, 133, 156, 0.15);
    transition: all 1s;
    &:hover {
      transform: scale(1.05);
    }
  }
  & p {
    color: $white;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
    & span {
      font-size: 1.5em;
      padding: 0 10px;
      & a {
        color: $green;
        text-decoration: none;
        &:hover {
          color: $blue;
        }
      }
    }
  }
}

.flex-intro-dev {
  grid-area: grid-intro-dev;
  &.text-dev {
    max-width: 960px;
    margin: 5rem auto 0;
    color: white;
    font-size: 1.2em;
    line-height: 1.5;
    padding: 0 20px;
    & p.projects {
      text-align: center;
      margin: 3rem 0 0;
    }
    @media screen and (max-width: 767px) {
      font-size: 1em;
    }
    & a {
      text-decoration: none;
      color: $green;
      &:hover {
        color: $orange;
      }
    }
  }
}

.flex-dev {
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 0 20px;
}
/* ... */

